--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_calculator"
+        android:roundIcon="@mipmap/ic_launcher_calculator_round"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
